# mc-connect

./: .gitignore  Cargo.toml  build.rs
agent/: Cargo.toml
agent/java/: build.gradle.kts
agent/java/gradle/wrapper/: gradle-wrapper.properties
agent/java/src/main/java/com/codemob/mcconnect/: MinecraftVersionResolver.java  Native.java  RustAgent.java  Tools.java  YarnMappingResolver.java
agent/src/: lib.rs
example/: Cargo.toml
example/src/: lib.rs  main.rs
examples/: main.rs
src/: agent.rs  initialization.rs  lib.rs  main.rs  minecraft.rs
src/agent/: build.gradle.kts  settings.gradle.kts
src/agent/src/main/java/com/codemob/: MinecraftVersionResolver.java  Native.java  RustAgent.java  Tools.java  YarnMappingResolver.java
src/communication/: client.rs  mod.rs  server.rs
