[package]
name = "mc-connect"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "rust_agent"
path = "src/agent.rs"
crate-type = ["cdylib"]


[dependencies]
itertools = "0.14.0"
jni = { version = "0.21.1", features = ["invocation"] }
lazy_static = "1.5.0"
num_enum = "0.7.3"
sysinfo = "0.35.1"
tempfile = "3.20.0"
tokio = { version = "1.45.0", features = ["full"] }
which = "7.0.3"
zip = "3.0.0"
