[package]
name = "mc-connect"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]


[workspace]
members = ["agent", "example"]


[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1" }
futures = "0.3.31"
itertools = "0.14.0"
jni = { version = "0.21.1", features = ["invocation"] }
sysinfo = "0.35.1"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
